--- a/nibadilishe/src/index.css
+++ b/nibadilishe/src/index.css
@@ -1,12 +1,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+/* @import url('./assets/font/Helvetica.ttf'); */
+@font-face {
+    font-family: 'helvetica';
+    src: local('helvetica'), url(./assets/font/helvetica-light-587ebe5a59211.ttf) format('ttf');
+  }
 
 body {
     margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
         'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-        sans-serif;
+        sans-serif,Arial, 'Helvetica', sans-serif; */
+    font-family: Helvetica;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     background-color: rgba(235, 235, 235, 0.856);
