--- a/nibadilishe/src/index.css
+++ b/nibadilishe/src/index.css
@@ -3,8 +3,8 @@
 @tailwind utilities;
 /* @import url('./assets/font/Helvetica.ttf'); */
 @font-face {
-    font-family: 'helvetica';
-    src: local('helvetica'), url(./assets/font/helvetica-light-587ebe5a59211.ttf) format('ttf');
+    font-family: 'quicksand';
+    src: local('Quicksand Book'), url(./assets/font/Quicksand_Book.otf) format('opentype');
   }
 
 body {
@@ -12,7 +12,7 @@ body {
     /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
         'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
         sans-serif,Arial, 'Helvetica', sans-serif; */
-    font-family: Helvetica;
+    font-family: 'quicksand';
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     background-color: rgba(235, 235, 235, 0.856);
