Total of 8 site pages created along with other modifications. Website all pages created

--- a/nibadilishe/src/index.css
+++ b/nibadilishe/src/index.css
@@ -5,7 +5,11 @@
 @font-face {
     font-family: 'quicksand';
     src: local('Quicksand Book'), url(./assets/font/Quicksand_Book.otf) format('opentype');
-  }
+}
+@font-face {
+    font-family: 'quicksand-bold';
+    src: local('Quicksand Bold'), url(./assets/font/Quicksand_Bold.otf) format('opentype');
+}
 
 body {
     margin: 0;
